Closed Bug 589520 Opened 15 years ago Closed 15 years ago

QApplication needs to be created with at least one argument

Categories

(Core Graveyard :: Widget: Qt, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jap, Assigned: jap)

References

Details

Attachments

(1 file)

See documentation at http://doc.trolltech.com/4.6/qapplication.html#QApplication nsQAppInstance are sometimes created with no command line arguments, this can than results in crashes (when some Qt code assumes that QCoreApplication::arguments() is never empty).
Attachment #468109 - Flags: review?(doug.turner)
I think bug 569121 - somehow connected to this bug
Attachment #468109 - Flags: review?(doug.turner) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: