Bug 589520 - Meegotouch don't check and don't understand that amount of arguments can be 0! r=dougt